--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,3 +1,3 @@
 [phases.setup]
-  nixLibs = ['...', 
-  'libuuid', 'libGL']
+  nixLibs = ['...', 'libuuid', 'libGL']
+  nixPkgs = ['...', 'libuuid', 'libGL']
